# Spice_personal

./: .gitignore  LICENSE  README.md  pyproject.toml  test.md
examples/: social_media_logic.py  test_social_media_logic.py
spice_personal/: __init__.py
spice_personal/advisory/: __init__.py  personal_advisory.py  personal_simulation_adapter.py
spice_personal/app/: __init__.py  personal.py
spice_personal/cli/: __init__.py  __main__.py  main.py  spice.py
spice_personal/config/: __init__.py  personal_config.py  provider_resolver.py  settings.py
spice_personal/domain/: __init__.py
spice_personal/execution/: __init__.py  evidence_round.py  execution_intent_v1.py
spice_personal/executors/: __init__.py  factory.py
spice_personal/profile/: __init__.py  contract.py  loader.py  validate.py
spice_personal/provider_bridges/: __init__.py  cli_agent_provider_bridge.py  model_provider_bridge.py  sdep_agent_provider_bridge.py
spice_personal/tests/: __init__.py  test_action_proposal_execution.py  test_capability_policy.py  test_claude_code_agent_wrapper.py  test_codex_agent_wrapper.py  test_content_ingest.py  test_entry_personal.py  test_evidence_round.py  test_execution_intent_v1.py  test_executor_wiring.py  test_openrouter_wrapper.py  test_personal_advisory_contract_guardrails.py  test_personal_connection_config.py  test_personal_context_wiring.py  test_personal_simulation_adapter_contract.py  test_personal_simulation_debug.py  test_personal_simulation_fanout.py  test_profile_contract_v1.py  test_suggestion_adoption_metadata.py  test_wrapper_error_taxonomy.py
(+10 files in other folders)
